# tls-protocol

./: .gitignore  Cargo.toml  ISSUE_46_IMPLEMENTATION.md  README.md  generate_demo_cert.sh  run_comprehensive_demo.sh  run_demo_client.sh  run_demo_server.sh
docs/: AEAD_IMPLEMENTATION.md  AEAD_SUMMARY.md  COMPREHENSIVE_DEMO.md  FINISHED_IMPLEMENTATION.md  FINISHED_SUMMARY.md  WIRESHARK_DEMO_GUIDE.md
examples/: aead_encryption.rs  client.rs  demo_client.rs  demo_comprehensive_client.rs  demo_comprehensive_server.rs  demo_server.rs  finished_handshake.rs  generate_demo_cert.rs  key_schedule.rs  server.rs  tls_client.rs
src/: aead.rs  certificate.rs  certificate_verify.rs  client.rs  client_hello.rs  decoder.rs  error.rs  extensions.rs  finished.rs  handshake_state.rs  key_schedule.rs  lib.rs  parser.rs  server.rs  server_hello.rs  tls_stream.rs  transcript_hash.rs  x25519_key_exchange.rs
tests/: aead_tests.rs  certificate_tests.rs  certificate_verify_tests.rs  client_hello_tests.rs  client_tests.rs  decoder_tests.rs  extension_tests.rs  finished_tests.rs  handshake_state_tests.rs  key_schedule_tests.rs  parser_tests.rs  server_hello_tests.rs  server_tests.rs  tls_stream_tests.rs  transcript_hash_tests.rs  x25519_key_exchange_tests.rs
