[package]
name = "tls-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]

aes-gcm = "0.10.3"
hkdf = "0.12.4"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10.9"
subtle = "2.5"
x25519-dalek = "2.0"
zeroize = "1.7"

# Signature verification (Issue #17)
rsa = "0.9"
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
x509-parser = "0.16"
signature = "2.2"
